Website UI Added

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,7 +16,7 @@
  <!-- Reciept top-half -->
 
   <section>
-  <header>
+  <header class="mobile-header">
     <div class="header-box">
       <input type="checkbox" name="check" id="check">
       <div class="logo-container">
