--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -68,7 +68,7 @@
       </div>
     </div>
   </header>
-    <div class="">
+    <div class="container my-4">
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -81,8 +81,7 @@
         <div class="carousel-inner">
 
           <div class="item active">
-            <img src="https://i2.wp.com/jashnnsignature.com/wp-content/uploads/2018/10/indian-wedding-wallpaper-1.jpg"
-              alt="Marraige Events" style="width:100%;">
+            <img src="../../../assets/banner-1.png" alt="Marraige Events" style="width:100%;border-radius: 22px;">
             <div class="carousel-caption">
               <h3>Marraige Events</h3>
               <p>LA is always so much fun!</p>
@@ -90,8 +89,7 @@
           </div>
 
           <div class="item">
-            <img src="https://i2.wp.com/jashnnsignature.com/wp-content/uploads/2018/10/indian-wedding-wallpaper-1.jpg"
-              alt="Marraige Events" style="width:100%;">
+            <img src="../../../assets/banner-2.png" alt="Marraige Events" style="width:100%;border-radius: 22px">
             <div class="carousel-caption">
               <h3>Marraige Events</h3>
               <p>Thank you, Marraige Events!</p>
@@ -99,8 +97,7 @@
           </div>
 
           <div class="item">
-            <img src="https://i2.wp.com/jashnnsignature.com/wp-content/uploads/2018/10/indian-wedding-wallpaper-1.jpg"
-              alt="Marraige Events" style="width:100%;">
+            <img src="../../../assets/banner-3.png" alt="Marraige Events" style="width:100%;border-radius: 22px">
             <div class="carousel-caption">
               <h3>Marraige Events</h3>
               <p>We love the Big Apple!</p>
