--- a/src/app/components/websitehome/websitehome.page.scss
+++ b/src/app/components/websitehome/websitehome.page.scss
@@ -1281,19 +1281,19 @@ section-title {
 --------------------------------------------------------------*/
 .header {
   color: #0a0f14;
-  background-color: #e4c815 !important;
-  padding: 12px 0;
+  background-color: #ffffff !important;
+  padding: 15px 0;
   transition: all 0.5s;
   z-index: 997;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-// .header .header-container {
-//   background: #e4c815;
-//   border-radius: 50px;
-//   padding: 5px 25px;
-//   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-// }
+.header .header-container {
+  background: #e4c815;
+  border-radius: 50px;
+  padding: 5px 25px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
 
 .header .logo {
   line-height: 1;
