--- a/src/app/components/websitehome/websitehome.page.html
+++ b/src/app/components/websitehome/websitehome.page.html
@@ -210,7 +210,7 @@
                 <p>Two hearts become one, a journey just begun. Wishing love, laughter, and a happily ever after.
                 </p>
               </div>
-               <a  class="thm-btn product-card_btn" data-toggle="modal" data-target="#myModal">Book Event<span></span></a>
+               <a  class="thm-btn product-card_btn"(click)="openEventDetailsModal()">Book Event<span></span></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -229,7 +229,7 @@
                 <p>Little hands and tiny feet, a bundle of joy we can’t wait to meet.
                   </p>
               </div>
-               <a  class="thm-btn product-card_btn" data-toggle="modal" data-target="#myModal">Book Event<span></span></a>
+               <a  class="thm-btn product-card_btn"(click)="openEventDetailsModal()">Book Event<span></span></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -247,7 +247,7 @@
                 <p>They found each other, and love found its way.
                   A promise made for a beautiful forever.</p>
               </div>
-               <a  class="thm-btn product-card_btn" data-toggle="modal" data-target="#myModal">Book Event<span></span></a>
+               <a  class="thm-btn product-card_btn"(click)="openEventDetailsModal()">Book Event<span></span></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -269,7 +269,7 @@
                 </p>
                 <a href="#" class="stretched-link"></a>
               </div>
-               <a  class="thm-btn product-card_btn" data-toggle="modal" data-target="#myModal">Book Event<span></span></a>
+               <a  class="thm-btn product-card_btn"(click)="openEventDetailsModal()">Book Event<span></span></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -288,7 +288,7 @@
                   Welcoming a new role with pride in place.</p>
                 <a href="#" class="stretched-link"></a>
               </div>
-               <a  class="thm-btn product-card_btn" data-toggle="modal" data-target="#myModal">Book Event<span></span></a>
+               <a  class="thm-btn product-card_btn"(click)="openEventDetailsModal()">Book Event<span></span></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -308,7 +308,7 @@
                   Gone from sight, but in our hearts eternally.</p>
                 <a href="#" class="stretched-link"></a>
               </div>
-               <a  class="thm-btn product-card_btn" data-toggle="modal" data-target="#myModal">Book Event<span></span></a>
+               <a  class="thm-btn product-card_btn"(click)="openEventDetailsModal()">Book Event<span></span></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -843,20 +843,20 @@
 
 
 <!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
+<!-- <div id="myModal" class="modal fade" role="dialog">
   <div class="modal-dialog video-dialog">
-    <!-- Modal content-->
+    
     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
     <div class="modal-content">
 
       <div class="modal-body">
         <div class='embed-container'>
-         
+         <app-event-details></app-event-details>
       </div>
     </div>
   </div>
 </div>
 
-</div>
+</div> -->
 
 </ion-content>
