--- a/src/app/components/event-details/event-details.page.html
+++ b/src/app/components/event-details/event-details.page.html
@@ -82,8 +82,8 @@
                     </div>
                 </div>
             </section>
-<div class="bg-orange">
-			<div class="container">
+<div class="">
+			<div class="">
 				<div class="row">
 					<div class="col-md-12">
 						
@@ -91,7 +91,7 @@
   <div class="Event-Menu-List">
               <div class="Event-Menu-List-img">
                 <img
-                  src="https://static.vecteezy.com/system/resources/previews/031/848/553/large_2x/indian-wedding-couple-ai-generated-free-photo.jpg"
+                  src="../../../assets/Events/1.png"
                   alt="thumb">
 
                 
